detail author and refactor code
