# routes/author/routes.php
@@ -9,5 +9,7 @@ use Illuminate\Support\Facades\Route;
  */
 Route::post('/', [AuthorController::class, 'store'])
     ->name('api.authors.store');
+Route::get('/{id}', [AuthorController::class, 'show'])
+    ->name('api.authors.show');
 Route::put('/{id}', [AuthorController::class, 'update'])
     ->name('api.authors.update');
